# schoolAI-backend

./: Cargo.toml  README.md  docker-compose.yml  dockerfile
.fastembed_cache/models--Xenova--all-MiniLM-L12-v2/refs/: main
.fastembed_cache/models--Xenova--all-MiniLM-L12-v2/snapshots/aa981e58784af77e8a107b2baf01d60859b4d7e6/: config.json
.fastembed_cache/models--Xenova--all-MiniLM-L12-v2/snapshots/aa981e58784af77e8a107b2baf01d60859b4d7e6/onnx/: model_quantized.onnx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250315_033605_create_blacklist_table.rs  m20250403_163323_create_cached_embeddings.rs
src/: llm.rs  main.rs
src/config/: config.rs  jwt.rs
src/controllers/: auth_controller.rs  content_controller.rs  mcq_controller.rs  mod.rs  presentation_controller.rs  test_controller.rs
src/middleware/: auth.rs
src/models/: auth_model.rs  blacklist.rs  embeddings.rs  features.rs  mod.rs  prelude.rs  presentation.rs  user.rs
src/router/: auth_routes.rs  feature_routes.rs  features_route.rs  mod.rs  test_routes.rs
src/services/: auth_service.rs  content_service.rs  extract.rs  llm_service.rs  mcq_service.rs  mod.rs  presentation_service.rs  rag_generate.rs  rag_store.rs  system_prompt.rs
src/services/prompts/: academic_content.txt  academic_content_old.txt  mcq.txt  mcq_old.txt  presentation.txt
src/utils/: errors.rs  response.rs
