[package]
name = "schoolAI_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
openrouter_api = "0.1.3"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres", 
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json"
] }
tokio = "1.44.0"
