[package]
name = "schoolAI_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
openrouter_api = "0.1.3"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres", 
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json",
    "with-uuid"
] }
serde = "1.0.218"
serde_json = "1.0.140"
tokio = "1.44.0"
uuid = "1.15.1"
validator = {version = "0.20.0", features = ["derive"]}
migration = {path = "./migration"}