[package]
name = "schoolAI_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.40"
dotenvy = "0.15.7"
openrouter_api = "0.1.3"
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres", 
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json",
    "with-uuid"
] }
serde = "1.0.218"
serde_json = "1.0.140"
tokio = "1.44.0"
uuid = {version = "1.15.1", features = [
    "v4",
]}
validator = {version = "0.20.0", features = ["derive"]}
migration = {path = "./migration"}
jsonwebtoken = "9.3.1"
async-trait = "0.1.87"
bcrypt = "0.17.0"
axum_typed_multipart = "0.15.1"
pdf-extract = "0.8.2"
docx-rs = "0.4.17"
tempfile = "3.19.1"
fastembed = "4.6.0"
sha256 = "1.6.0"
sha2 = "0.10.8"
usearch = {version = "2.17.6", default-features = false}
text-splitter = { version = "0.25.1", features = ["markdown"] }
reqwest = "0.12.15"
